crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__multi_stats_then_sort_then_limit.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"service:nginx | stats count() by host | sort -count | limit 10\")"
---
SELECT "host", COUNT(*) AS "count"
FROM read_parquet('/data/**/*.parquet')
WHERE "service" = ?
GROUP BY "host"
ORDER BY "count" DESC
LIMIT 10
---
params:
  0: 'nginx'
