crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__multi_stats_then_where.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"service:nginx | stats count() by host | where count > 10\")"
---
WITH _s0 AS (
  SELECT "host", COUNT(*) AS "count"
  FROM read_parquet('/data/**/*.parquet')
  WHERE "service" = ?
  GROUP BY "host"
)
SELECT *
FROM "_s0"
WHERE ("count" > ?)
---
params:
  0: 'nginx'
  1: 10
