crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__multi_table_then_stats.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | table host, service | stats count() by host\")"
---
WITH _s0 AS (
  SELECT "host", "service"
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
)
SELECT "host", COUNT(*) AS "count"
FROM "_s0"
GROUP BY "host"
