crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__pipe_dedup_bare.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | dedup\")"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet')
)
SELECT DISTINCT *
FROM "_s0"
