crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__pipe_dedup_multiple_fields.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | dedup host, service\")"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet')
), _s1 AS (
  SELECT *, ROW_NUMBER() OVER (PARTITION BY "host", "service" ORDER BY CAST("timestamp" AS TIMESTAMP) DESC) AS "_rn"
  FROM "_s0"
)
SELECT * EXCLUDE ("_rn")
FROM "_s1"
WHERE "_rn" = 1
