crates/fleet-core/src/emitter/snapshots/fleet_core__emitter__tests__pipe_drop_single.snap
---
source: crates/fleet-core/src/emitter/mod.rs
expression: "emit_dsl(\"* | drop message\")"
---
SELECT * EXCLUDE ("message")
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
